--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,6 +1,7 @@
 
 foo = foo version 24
 democonfigclient.message=hello spring io
+clientVersion = version 001
 
 # routes to serviceId
 # routes to url
