--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,7 +1,7 @@
 
-foo = foo version 24
+foo = foo version 30
 democonfigclient.message=hello spring io
-clientVersion = version 001
+clientVersion = | version 002
 
 # routes to serviceId
 # routes to url
